--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "fetch": "^1.1.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
+    "node-fetch": "^2.6.13",
     "nodemon": "^3.0.1"
   }
 }
